--- a/style.css
+++ b/style.css
@@ -1,10 +1,23 @@
+body{
+    display: flex;
+    justify-content: center;
+}
+
+.header{
+    display:flex;
+    justify-content: center;
+    margin-bottom: 100px;
+}
+
 .container{
     display: grid;
-    grid-template-columns: repeat(8,1fr);
     border-style:groove;
     border-width: thin;
-    max-width: 960px;
-    grid-auto-rows: 50px;
+    max-width: 500px;
+    max-height: 500px;
+    min-width: 500px;
+    min-height: 500px;
+   
 }
 
 .new-grid-block{
