--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
 body{
     display: flex;
     justify-content: center;
+    background-color: 	#101010;
+}
+
+.body-container{
+    border-style: solid;
+    background-color: #FF3333;
+    padding: 25px;
 }
 
 .header{
     display:flex;
     justify-content: center;
     margin-bottom: 100px;
+   
+    font-family: 'Kalam', cursive;
+    color: black;
+    font-size: 3rem;
+    font-weight:bolder;
+    font-variant: small-caps;
+    font-style: oblique;
+      
 }
 
 .container{
@@ -17,6 +32,8 @@ body{
     max-height: 500px;
     min-width: 500px;
     min-height: 500px;
+    margin-bottom: 100px;
+    border-color: black;
    
 }
 
@@ -24,7 +41,22 @@ body{
     display: flex;
     justify-content: center;
     align-content: center;
-    border-style: groove;
-    border-radius: 0.5;
+    border-style:solid;
+    border-color: black;
+    border-width: 0.1mm;
 }
 
+.buttons{
+    display: flex;
+  
+}
+
+.change-grid-size{
+    margin-top: 10px;
+}
+
+button{
+    width: 10em;
+    height:2em;
+    
+}
